--- a/kanji/templates/channel2.html
+++ b/kanji/templates/channel2.html
@@ -116,11 +116,11 @@ anychart.onDocumentReady(function () {
       });
     }
     
-    var eventMarkers = plot.eventMarkers();
-    eventMarkers.data(eventmarkers);
+    //var eventMarkers = plot.eventMarkers();
+    //eventMarkers.data(eventmarkers);
     
-    plot.eventMarkers({groups: eventMarkersData});
-    
+    //plot.eventMarkers({groups: eventMarkersData});
+    plot.eventMarkers(eventmarkers)
     /*
     var MSFT = plot.candlestick(msftDataTable.mapAs({
         'open': 1,
