--- a/kanji/templates/channel2.html
+++ b/kanji/templates/channel2.html
@@ -26,10 +26,12 @@
 </style>
 </head>
 <body>			
-  <div id="container">				
-    <div class="container-title">
-    </div>
-  </div>
+<div class="container">
+    <div class="row" style="width:900px;">
+        <div class="column" id="timeline" style="text-align:center;width:600px;height:400px">{{ location }}</div>
+        <div class="column" id="timediff" style="text-align:center;width:300px;height:20px">{{ timediff }}</div>
+    </div>    
+</div>
 <script>
 anychart.onDocumentReady(function () {
     data = {{ data | safe }};
@@ -191,7 +193,7 @@ anychart.onDocumentReady(function () {
         // disable interaction with Annotation
     }).allowEdit(false); 
     */
-    chart.container('container');
+    chart.container('timeline');
     // initiate chart drawing
     chart.draw();
 });
