--- a/kanji/templates/channel2.html
+++ b/kanji/templates/channel2.html
@@ -77,7 +77,7 @@ anychart.onDocumentReady(function () {
     var eventMarkers = plot.eventMarkers();
 
     // set event markers settings
-    eventMarkers.position('xenon_01');
+    eventMarkers.position(line[0]);
 
 
     chart.container('timeline');
