--- a/kanji/templates/channel2.html
+++ b/kanji/templates/channel2.html
@@ -43,7 +43,7 @@ anychart.onDocumentReady(function () {
 
     // create stock chart
     var chart = anychart.stock();
-    anystock.format.outputTimezone(600); 
+    //anystock.format.outputTimezone(600); 
     // set chart title
     chart.title('Temperature');
     // set chart padding
