--- a/kanji/templates/channel.html
+++ b/kanji/templates/channel.html
@@ -1,123 +1,79 @@
-{% load staticfiles %}                     
+{% load staticfiles %}                        
 <html>
 <head>
-  <script src="https://cdn.anychart.com/releases/v8/js/anychart-base.min.js"></script>
-  <script src="https://cdn.anychart.com/releases/v8/js/anychart-ui.min.js"></script>
-  <script src="https://cdn.anychart.com/releases/v8/js/anychart-exports.min.js"></script>
-  <link href="https://cdn.anychart.com/releases/v8/css/anychart-ui.min.css" type="text/css" rel="stylesheet">
-  <link href="https://cdn.anychart.com/releases/v8/fonts/css/anychart-font.min.css" type="text/css" rel="stylesheet"> 
-  <script src="https://cdn.anychart.com/releases/v8/js/anychart-circular-gauge.min.js"></script>
-  <script src="https://cdn.anychart.com/releases/v8/js/anychart-annotations.min.js"></script>
-  <script src="https://cdn.anychart.com/releases/v8/js/anychart-cartesian.min.js"></script>
-<style type="text/css">
-html, body, #container {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-* {
-  box-sizing: border-box;
-}
-
-/* Create two unequal columns that floats next to each other */
-.column {
-  float: left;
-  padding: 10px;
-  height: 300px; /* Should be removed. Only for demonstration */
-}
-
-.left {
-  width: 25%;
-}
-
-.right {
-  width: 75%;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-</style>
+  <script src="https://cdn.anychart.com/releases/v8/js/anychart-base.min.js?hcode=be5162d915534272a57d0bb781d27f2b"></script>
+  <script src="https://cdn.anychart.com/releases/v8/js/anychart-ui.min.js?hcode=be5162d915534272a57d0bb781d27f2b"></script>
+  <script src="https://cdn.anychart.com/releases/v8/js/anychart-exports.min.js?hcode=be5162d915534272a57d0bb781d27f2b"></script>
+  <script src="https://cdn.anychart.com/releases/v8/js/anychart-stock.min.js?hcode=be5162d915534272a57d0bb781d27f2b"></script>
+  <script src="https://cdn.anychart.com/releases/v8/js/anychart-annotations.min.js?hcode=be5162d915534272a57d0bb781d27f2b"></script>
+  <script src="https://cdn.anychart.com/csv-data/msft-daily-short.js"></script>
+  <script src="https://cdn.anychart.com/csv-data/orcl-daily-short.js"></script>
+  <script src="https://cdn.anychart.com/csv-data/csco-daily-short.js"></script>
+  <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+  <script src="https://cdn.anychart.com/csv-data/empty_data(2009-2010).js"></script>
+  <link href="https://cdn.anychart.com/playground-css/annotated/annotated-title.css" type="text/css" rel="stylesheet">
+  <link href="https://cdn.anychart.com/releases/v8/css/anychart-ui.min.css?hcode=be5162d915534272a57d0bb781d27f2b" type="text/css" rel="stylesheet">
+  <link href="https://cdn.anychart.com/releases/v8/fonts/css/anychart-font.min.css?hcode=be5162d915534272a57d0bb781d27f2b" type="text/css" rel="stylesheet">
+  <style type="text/css">
+				html,
+				body,
+				#container {
+					width: 100%;
+					height: 100%;
+					margin: 0;
+					padding: 0;
+				}
+  </style>
 </head>
-<body>
+<body>			
 <div class="container">
     <div class="row" style="width:900px;">
-        <div class="column" id="location" style="text-align:center;width:600px;height:20px">{{ location }}</div>
-        <div class="column" id="timediff" style="text-align:center;width:300px;height:20px">{{ timediff }}</div>
-    </div>
-    <div class="row" style="width:1400px;">
-        <div class="column" id="container_1" style="width:1400px;height:600px"></div>        
+        <div class="column" id="channel-timeline" style="text-align:center;width:900px;height:600px">{{ location }}</div>
     </div>    
 </div>
-<script type="text/javascript">
-    window.setTimeout("reloadpage();", 60000);    
-    function reloadpage() {
-      location.reload(true)
-    }
-</script>
 <script>
 anychart.onDocumentReady(function () {
-    // data[node][][]
-    // 3-dimensional array
     data = {{ data | safe }};
-    annotations = {{ annotations | safe }};
-    chartdefs = {{ chartdefs | safe}};    
-    var chartSeries = new Array(3)
-    // create line chart
-    chart = anychart.line();
-    // access the annotations() object of the plot to work with annotations
-    chart.xAxis().ticks().enabled(true);
-    chart.yAxis().ticks().enabled(false);
-    // draw lines where controller transitions
-    var marker = chart.lineMarker();
-    marker.axis(chart.yAxis());
-    marker.value(75); 
-    //work on the time axis
-    var dateScale = anychart.scales.dateTime();
-    // set one year ticks interval
-    var dateTicks = dateScale.ticks();
-    dateTicks.interval(0, 0, 0, 0, 60);
-    // set two months minor ticks interval
-    var dateMinorTicks = dateScale.minorTicks();
-    //years, months, days, hours, minutes, seconds.
-    dateMinorTicks.interval(0, 0, 0, 0, 30);
-    // set DateTime Scale as x scale of the chart
-    var offset = new Date().getTimezoneOffset();
-    anychart.format.outputTimezone(600);      
-    chart.xScale(dateScale);      
-    // turn on chart animation
-    chart.animation(true);
-    // set chart padding
-    chart.padding([10, 20, 5, 20]);
-    // turn on the crosshair
-    chart.crosshair().enabled(true).yLabel(false).yStroke(null);
-    // set tooltip mode to point
-    chart.tooltip().positionMode('point');
-    chart.tooltip().titleFormat("time: {%x}{dateTimeFormat:HH:mm:ss}");
-    // set chart title text settings
-    chart.title("Temperature");
-    // set yAxis title
-    chart.yAxis().title(chartdefs.charts[0]['ylabel']);
-    chart.xAxis().labels().padding(5)
-    // there will be multiple series in the same chart 
-    for (n=0; n<3; n++) {
-      var dataSet = anychart.data.set(data[n]);
-      var seriesData = dataSet.mapAs({'x': 0, 'value': 1});
-      chartSeries[n] = chart.line(seriesData);
-      chartSeries[n].name(chartdefs.charts[n]['title']);
-      chartSeries[n].hovered().markers().enabled(true).type('circle').size(4);
-      chartSeries[n].tooltip().position('right').anchor('left-center').offsetX(5).offsetY(5);
-      chartSeries[n].stroke(chartdefs.charts[n]['linecolor']);
+    chartdefs = {{ chartdefs | safe}}; 
+    var line = new Array(data.length);
+    var dataSet = new Array(data.length)
+   
+    var chart = anychart.stock();                                       // we're using the stock chart because of the extensive annotation features
+    anychart.format.outputTimezone(600); 
+    
+    chart.title({{ charttitle }});                                         // set chart title    
+    chart.padding([15, 50, 57, 50]);
+    
+    var plot = chart.plot();                                            // create plot on the chart
+    plot.yGrid(true).xGrid(true).xMinorGrid(true).yMinorGrid(true);    
+    plot.legend().itemsFormatter(function (items) {                     // format legend items
+        items.splice(3, 1);                                             // return items array
+        return items;
+    });   
+ 
+    for (n=0; n<data.length; n++) {                                               // plot each series in data[]
+      dataSet[n] = anychart.data.table();
+      dataSet[n].addData(data[n]);
+      line[n] = plot.line(dataSet[n].mapAs({'x': 0, 'value': 1}));
+      line[n].name(chartdefs.charts[n]['title']);
+      line[n].stroke(chartdefs.charts[n]['linecolor']);
+      line[n].tooltip().format(function () {
+        return tooltipFormatter(this, false)
+      });
     }
-    chart.container('container_1');      
+  
+    plot.eventMarkers(eventmarkers)                                     // plot the eventmarkers    
+    var eventMarkers = plot.eventMarkers();
+    eventMarkers.position('series');                                    // position the eventmarkers
+
+    chart.container('channel-timeline');                                        // locate and draw the chart
     chart.draw();
 });
-</script>
 
+function tooltipFormatter(item, is_ohlc) {
+    return item.seriesName + ': ' + item.value;
+}
+</script>
 </body>
 </html>
 
