--- a/kanji/templates/channel.html
+++ b/kanji/templates/channel.html
@@ -41,7 +41,7 @@ anychart.onDocumentReady(function () {
     var chart = anychart.stock();                                       // we're using the stock chart because of the extensive annotation features
     anychart.format.outputTimezone(600); 
     
-    chart.title({{ charttitle }});                                         // set chart title    
+    chart.title('Temp');                                         // set chart title    
     chart.padding([15, 50, 57, 50]);
     
     var plot = chart.plot();                                            // create plot on the chart
