--- a/kanji/templates/channel.html
+++ b/kanji/templates/channel.html
@@ -33,15 +33,16 @@
 </div>
 <script>
 anychart.onDocumentReady(function () {
-    data = {{ data | safe }};
-    chartdefs = {{ chartdefs | safe}}; 
+    data = {{ data | safe }}
+    eventmarkers = {{ eventmarkers | safe }}
+    chartdefs = {{ chartdefs | safe}};    
     var line = new Array(data.length);
     var dataSet = new Array(data.length)
    
     var chart = anychart.stock();                                       // we're using the stock chart because of the extensive annotation features
     anychart.format.outputTimezone(600); 
     
-    chart.title('Temp');                                         // set chart title    
+    chart.title('Temperature');                                         // set chart title    
     chart.padding([15, 50, 57, 50]);
     
     var plot = chart.plot();                                            // create plot on the chart
