--- a/kanji/templates/node.html
+++ b/kanji/templates/node.html
@@ -65,7 +65,7 @@ html, body, #container {
 </div>
 <script type="text/javascript">
     window.setTimeout("reloadpage();", 60000);    
-    function reloadpage() {
+    function reloadpage() {    // page automatically reloads every 60seconds
       location.reload(true)
     }
 </script>
