--- a/kanji/templates/channelchart.html
+++ b/kanji/templates/channelchart.html
@@ -5,7 +5,7 @@
 </head>
 <body> 
 <div class="container"> 
-    <img src="{% static 'images/{{image}}' %}" alt="QuizMe" style="align:top;width:400;height:162;margin-bottom:16"">
+    <img src="{% static 'images/'{{image}} %}" alt="QuizMe" style="align:top;width:400;height:162;margin-bottom:16"">
 </div>  
 </body>
 </html>
