--- a/kanji/templates/channelchart.html
+++ b/kanji/templates/channelchart.html
@@ -1,11 +1,11 @@
 {% load staticfiles %}
 <html>
 <head>
-    <title>Peabody's WayBack</title>    
+    <title>Kanji Analytics</title>    
 </head>
 <body> 
 <div class="container"> 
-    <img src="{% static 'images/' %}{{image}}" alt="QuizMe" style="align:top;width:400;height:162;margin-bottom:16"">
+    <img src="{% static 'images/' %}{{image}}" alt="channel-history" style="align:top;width:400;height:162;margin-bottom:16"">
 </div>  
 </body>
 </html>
