--- a/kanji/templates/channelchart.html
+++ b/kanji/templates/channelchart.html
@@ -6,6 +6,9 @@
 <body> 
 <div class="container"> 
     <img src="{% static 'images/' %}{{image}}" alt="channel-history" style="align:top;width:400;height:162;margin-bottom:16"">
-</div>  
+</div>
+<div class="container"> 
+    <img src="{% static 'images/' %}{{image}}" alt="channel-history" style="align:top;width:400;height:162;margin-bottom:16"">
+</div>   
 </body>
 </html>
