--- a/kanji/templates/channelchart.html
+++ b/kanji/templates/channelchart.html
@@ -5,6 +5,7 @@
 </head>
 <body> 
 <div class="container"> 
+<h1>Image</h1>
     <img src="{% static 'images/' %}{{image}}" alt="channel-history" style="align:top;width:400;height:162;margin-bottom:16"">
 </div>
 <div class="container"> 
