--- a/kanji/templates/channelchart.html
+++ b/kanji/templates/channelchart.html
@@ -6,7 +6,7 @@
 <body> 
 <div class="container"> 
 <h1>Image</h1>
-    <img src="{% static 'images/' %}{{image}}" alt="channel-history" style="align:top;width:400;height:162;margin-bottom:16"">
+    <img src="{% static 'images/channel.png' %}" alt="channel-history" style="align:top;width:400;height:162;margin-bottom:16"">
 </div>
 <div class="container"> 
     <img src="{% static 'images/' %}{{image}}" alt="channel-history" style="align:top;width:400;height:162;margin-bottom:16"">
