--- a/kanji/templates/channelchart.html
+++ b/kanji/templates/channelchart.html
@@ -5,7 +5,7 @@
 </head>
 <body> 
 <div class="container"> 
-    <img src="{% static 'images/' %}{{image}}" alt="channel-history" style="align:top;width:800;height:600;margin-bottom:16"">
+    <img src="{% static 'images/' %}{{image}}" alt="channel-history">
 </div>   
 </body>
 </html>
