--- a/kanji/templates/channelchart.html
+++ b/kanji/templates/channelchart.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 <html>
 <head>
-    <title>Kanji Analytics</title>    
+    <title>MeshIO Sensor Network</title>    
 </head>
 <body> 
 <div class="container"> 
