--- a/kanji/templates/meshio.html
+++ b/kanji/templates/meshio.html
@@ -4,6 +4,9 @@
     <title>MeshIO Sensor Network</title>
     <link rel="stylesheet" href="{% static 'css/kanji.css' %}">    
 </head>
-<body> 
+<body>
+<div class="container">
+<c><small> charliewp/Sensei v1.02 uses the GNU GPL v3.0 [v20190328]</small></c>
+</div>
 </body>
 </html>
