--- a/kanji/static/css/kanji.css
+++ b/kanji/static/css/kanji.css
@@ -600,7 +600,7 @@ tr td a {
 
 body {
    /*image files are in css/images folder*/
-   background: url("images/meshio-transp.png") repeat;    
+   background: url("images/meshio.png") repeat;    
     padding-left: 0px;
 }
 
