--- a/kanji/templates/meshio.html
+++ b/kanji/templates/meshio.html
@@ -7,6 +7,7 @@
 <body>
 <div class="container">
 <c><small> charliewp/Sensei v1.02 uses the GNU GPL v3.0 [v20190328]</small></c>
+<h3>{{nodecount}} devices are happily chatting on the network!</h3<
 </div>
 </body>
 </html>
