--- a/kanji/static/css/kanji.css
+++ b/kanji/static/css/kanji.css
@@ -4,6 +4,13 @@
 */
 {% load staticfiles %}
 
+div.fixed {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  width: 300px;
+  border: 3px solid #73AD21;
+}
 
 .transparent_btn {
 	display: inline-block;
