--- a/kanji/templates/meshio.html
+++ b/kanji/templates/meshio.html
@@ -7,7 +7,7 @@
 <body>
 <div class="container">
 <c><small> charliewp/Sensei v1.02 uses the GNU GPL v3.0 [v20190328]</small></c>
-<div style="fixed">
+<div class="fixed">
 <h3>{{nodecount}} things are working quietly across the network!</h3>
 </div>
 </div>
