--- a/kanji/static/css/kanji.css
+++ b/kanji/static/css/kanji.css
@@ -6,9 +6,12 @@
 
 div.fixed {
   position: fixed;
-  bottom: 0;
-  right: 0;
+  bottom: 10px;
+  right: 10px;
   width: 600px;
+  color: #FFF;
+  font-family: "Arial";
+  font-size: 14px;
   border: 0px solid #73AD21;
 }
 
