--- a/kanji/static/css/kanji.css
+++ b/kanji/static/css/kanji.css
@@ -6,8 +6,8 @@
 
 div.fixed {
   position: fixed;
-  bottom: 10px;
-  right: 10px;
+  top: 100px;
+  left: 10px;
   width: 600px;
   color: #FFF;
   font-family: "Arial";
