--- a/kanji/static/css/kanji.css
+++ b/kanji/static/css/kanji.css
@@ -15,6 +15,12 @@ div.fixed {
   border: 0px solid #73AD21;
 }
 
+body {
+   /*image files are in css/images folder*/
+   background: url("images/meshio-2.png") repeat;    
+    padding-left: 0px;
+}
+
 .transparent_btn {
 	display: inline-block;
 	padding: 10px 14px;
@@ -608,11 +614,7 @@ tr td a {
     padding: 0px;
 }
 
-body {
-   /*image files are in css/images folder*/
-   background: url("images/meshio.png") repeat;    
-    padding-left: 0px;
-}
+
 
 table, th, td {
    border: 0px solid black;
