--- a/kanji/templates/meshio.html
+++ b/kanji/templates/meshio.html
@@ -7,7 +7,7 @@
 <body>
 <div class="container">
 <div class="fixed">
-{{nodecount}} things are working quietly across the network!
+{Watching {nodecount}} nodes working nicely on the network!
 </div>
 </div>
 </body>
