--- a/kanji/templates/meshio.html
+++ b/kanji/templates/meshio.html
@@ -7,7 +7,21 @@
 <body>
 <div class="container">
 <div class="fixed">
-{Watching {nodecount}} nodes working nicely on the network!
+Watching {{nodecount}} nodes working nicely on the network!
+</div>
+<div class="divTable" style="width:100%">
+                                <div class="divTableBody" name="aliasInfo">
+                                    {% for name, pctavail in networkstatus %}
+                                    <div class="divTableRow">                           
+                                        <div class="divTableCell">
+                                           {{name}}
+                                        </div>
+                                        <div class="divTableCell">
+                                           {{pctavail}}
+                                        </div>
+                                    </div>
+                                    {% endfor %}
+                                </div>
 </div>
 </div>
 </body>
