--- a/kanji/templates/meshio.html
+++ b/kanji/templates/meshio.html
@@ -11,7 +11,7 @@ Watching {{nodecount}} nodes working nicely on the network!
 </div>
 <div class="divTable" style="width:100%">
                                 <div class="divTableBody" name="aliasInfo">
-                                    {% for name, pctavail in networkstatus %}
+                                    {% for name, pctavail in {{networkstatus}} %}
                                     <div class="divTableRow">                           
                                         <div class="divTableCell">
                                            {{name}}
