--- a/kanji/templates/meshio.html
+++ b/kanji/templates/meshio.html
@@ -9,7 +9,7 @@
 <div class="fixed">
 Watching {{nodecount}} nodes working nicely on the network!
 </div>
-<div class="divTable" style="width:100%">
+<div class="fixedtable1" style="width:100%">
     <div class="divTableBody" name="aliasInfo">
         {% for node in networkstatus %}
             <div class="divTableRow">                           
