--- a/kanji/templates/meshio.html
+++ b/kanji/templates/meshio.html
@@ -12,11 +12,13 @@ Watching {{nodecount}} nodes working nicely on the network!
 <div class="fixedtable1" style="width:20%">
     <div class="divTableBody" name="aliasInfo">
         {% for node in networkstatus %}
-            <div class="divTableRow" style="width:50%">                           
-                <div class="divTableCell">
+            <div class="divTableRow">                           
+                <div class="divTableCell" style="width:40%">
                     {{node.name}}
                 </div>
-                <div class="divTableCell" style="width:50%">
+                <div class="divTableCell" style="width:20%">
+                </div>
+                <div class="divTableCell" style="width:40%">
                     {{node.availpct}}
                 </div>
             </div>
