--- a/kanji/templates/meshio.html
+++ b/kanji/templates/meshio.html
@@ -13,6 +13,7 @@
 <body>
 <div class="container">
 <div class="fixed">
+At {{timestamp}}<br>
 Watching {{nodecount}} nodes working nicely on the network!
 </div>
 <div class="fixedtable1" style="width:15%">
