--- a/kanji/templates/meshio.html
+++ b/kanji/templates/meshio.html
@@ -14,7 +14,7 @@
 <div class="container">
 <div class="fixed">
 At {{timestamp}}<br>
-Watching {{nodecount}} nodes working nicely on the network!
+watching {{nodecount}} nodes working nicely on the network!
 </div>
 <div class="fixedtable1" style="width:15%">
     <div class="divTableBody" name="aliasInfo">
