--- a/kanji/templates/meshio.html
+++ b/kanji/templates/meshio.html
@@ -13,8 +13,7 @@
 <body>
 <div class="container">
 <div class="fixed">
-At {{timestamp}}<br>
-watching {{nodecount}} nodes working nicely on the network!
+At {{timestamp}} watching {{nodecount}} nodes working nicely on the network!
 </div>
 <div class="fixedtable1" style="width:15%">
     <div class="divTableBody" name="aliasInfo">
