--- a/kanji/templates/meshio.html
+++ b/kanji/templates/meshio.html
@@ -6,7 +6,7 @@
     <script type="text/javascript">
     window.setTimeout("redirectpage();", 30000);    
     function redirectpage(){
-    window.top.location.href = '/kanji/';
+    window.top.location.href = '/kanji/customer/{{customerid}}';
     }
 </script>    
 </head>
