--- a/kanji/templates/meshio.html
+++ b/kanji/templates/meshio.html
@@ -22,10 +22,10 @@ At {{timestamp}} watching {{nodecount}} nodes:
                 <div class="divTableCell" style="width:15%">
                     {{node.name}}
                 </div>                
-                <div class="divTableCell" style="width:28%">
+                <div class="divTableCell" style="align:center;width:28%">
                     {{node.availpct}}
                 </div>
-                <div class="divTableCell" style="width:37%">
+                <div class="divTableCell" style="align:center;width:37%">
                     {{node.application}}
                 </div>
             </div>
