--- a/kanji/templates/meshio.html
+++ b/kanji/templates/meshio.html
@@ -19,7 +19,7 @@ At {{timestamp}} watching {{nodecount}} nodes:
     <div class="divTableBody" name="aliasInfo">
         <div class="divTableRow">                           
                 <div class="divTableCell" style="width:15%">
-                    <h3>Name</h3>
+                    <h3>Node</h3>
                 </div>                
                 <div class="divTableCell" style="align:center;width:28%">
                     <h3>Cloud Availability</h3>
