--- a/kanji/templates/meshio.html
+++ b/kanji/templates/meshio.html
@@ -13,7 +13,7 @@
 <body>
 <div class="container">
 <div class="fixed">
-At {{timestamp}} watching {{nodecount}} nodes:
+At {{timestamp}}
 </div>
 <div class="fixedtable1" style="width:40%">
     <div class="divTableBody" name="aliasInfo">
