--- a/kanji/static/css/kanji.css
+++ b/kanji/static/css/kanji.css
@@ -6,7 +6,7 @@
 
 body {
    /*image files are in kanji/static/css/images folder*/
-   background: url("images/meshio-2.png");    
+   background: url("images/pigops_porterfarms.png");    
     padding-left: 0px;
 }
 
