--- a/kanji/templates/squealers.html
+++ b/kanji/templates/squealers.html
@@ -14,8 +14,12 @@
 <div class="container">
 <div class="fixed">
 </div>
+
 <div class="fixedtable1" style="width:40%">
     <div class="divTableBody" name="aliasInfo">
+        <div class="divTableRow">
+          <h2>Piglets Squealing</h2>
+        </div>
         {% for squeal in squealers %}
             <div class="divTableRow">                           
                 <div class="divTableCell" style="width:30%">
