--- a/kanji/templates/squealers.html
+++ b/kanji/templates/squealers.html
@@ -11,11 +11,8 @@
     </script>    
 </head>
 <body>
-<div class="container">
-<div class="fixed">
-</div>
-
-<div class="fixedtable1" style="width:40%">
+<div class="container" style="width:100%;padding:200px 50px;">
+<div class="fixedtable1" style="width:40%;">
     <div class="divTableBody" name="aliasInfo">
         <div class="divTableRow">
           <h2>Piglets Squealing</h2>
