--- a/kanji/templates/squealers.html
+++ b/kanji/templates/squealers.html
@@ -11,19 +11,19 @@
     </script>    
 </head>
 <body>
-<div class="container" style="width:100%;padding:200px 50px;">
+<div class="container" style="width:100%;padding:150px 50px;">
 <div class="fixedtable1" style="width:40%;">
     <div class="divTableBody" name="aliasInfo">
         <div class="divTableRow">
-          <h2>Piglets Squealing</h2>
+          <h2>Squeal Alerts (24hrs)</h2>
         </div>
         {% for squeal in squealers %}
             <div class="divTableRow">                           
-                <div class="divTableCell" style="width:40%">
+                <div class="divTableCell" style="width:50%">
                     <h2>{{squeal.time}}</h2>
                 </div>
-                <div class="divTableCell" style="width:60%">
-                    <audio controls>
+                <div class="divTableCell" style="width:50%">
+                    <audio controls >
                       <source src="{% static 'media/' %}{{squeal.tape}}" />
                     </audio>
                 </div>                              
