--- a/kanji/templates/squealers.html
+++ b/kanji/templates/squealers.html
@@ -20,7 +20,7 @@
         {% for squeal in squealers %}
             <div class="divTableRow">                           
                 <div class="divTableCell" style="width:50%">
-                    <h2>{{squeal.time}}</h2>
+                    <h2>{{squeal.location}} {{squeal.time}}</h2>
                 </div>
                 <div class="divTableCell" style="width:50%">
                     <audio controls >
