--- a/kanji/static/css/kanji.css
+++ b/kanji/static/css/kanji.css
@@ -6,7 +6,7 @@
 
 body {
    /*image files are in kanji/static/css/images folder*/
-   background: url("images/pigops_porterfarms.png"); 
+   /*background: url("images/pigops_porterfarms.png"); */
    /*background: url("https://www.mapquestapi.com/staticmap/v5/map?key=5FW2qUWgNqOLSu6Gw7iOH71WdX1MUhnZ&locations=35.353422,-80.442447|circle-sm-87%C2%BA||35.353675,-80.442447|marker-sm-7&size=1100,500@2x&type=hyb&zoom=18");     */
     padding-left: 0px;
 }
