--- a/kanji/templates/squealers.html
+++ b/kanji/templates/squealers.html
@@ -23,9 +23,9 @@
                     <h2>{{squeal.location}} {{squeal.time}}</h2>
                 </div>
                 <div class="divTableCell" style="width:40%">
-                  <!--  <audio controls >
+                    <audio controls >
                       <source src="{% static 'media/' %}{{squeal.tape}}" />
-                    </audio> -->
+                    </audio>
                 </div>                              
             </div>
         {% endfor %}
